# mmemo

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yaml  release.yaml
src/: app.rs  config.rs  expand.rs  main.rs  parser.rs
src/app/: commands.rs  config.rs  error.rs  expand.rs  path_utils.rs  selector.rs  template.rs
src/app/selector/: builtin.rs  core.rs  external.rs  ui.rs
