[package]
name = "mmemo"
version = "0.1.0"
edition = "2024"
description = "A simple CLI memo management tool"
license = "MIT"
repository = "https://github.com/nagokos/mmemo"
readme = "README.md"
keywords = ["cli", "memo", "notes"]
categories = ["command-line-utilities"]

[dependencies]
toml = "0.9.11"
thiserror = "2.0.17"
crossterm = "0.29.0"
chrono = "0.4.44"
termimad = "0.34.1"
